--- a/src/_data/settings.json
+++ b/src/_data/settings.json
@@ -1,27 +1,30 @@
 {
-	"themeColorLight": "#eceff4",
-	"themeColorDark": "#2e3440",
-	"cdn": false,
-	"author": {
-		"name": "Scott Evans",
-		"email": "noreply@example.com",
-		"url": "https://scott.ee",
-		"location": "Stockholm, Sweden",
-		"fediverseProfile": "https://toot.scott.ee/@scott"
-	},
-	"meta": {
-		"separator": "•",
-		"opengraphDefaultImage": "/assets/img/opengraph-default.png"
-	},
-	"seo": {
-		"defaultChangeFrequency": "monthly",
-		"defaultPriority": "0.7"
-	},
-	"manifest": {
-		"themeColor": "#eceff4",
-		"backgroundColor": "#eceff4",
-		"display": "minimal-ui",
-		"orientation": "portrait-primary",
-		"categories": ["business", "photo"]
-	}
+  "themeColorLight": "#f2e2b9",
+  "themeColorDark": "#372d11",
+  "cdn": true,
+  "author": {
+    "name": "Phoenix Roy",
+    "email": "royphoenix@protonmail.com",
+    "url": "https://scott.ee",
+    "location": "Canada",
+    "fediverseProfile": "https://bookstodon.com/@nebulanix"
+  },
+  "meta": {
+    "separator": "•",
+    "opengraphDefaultImage": "/assets/img/opengraph-default.png"
+  },
+  "seo": {
+    "defaultChangeFrequency": "monthly",
+    "defaultPriority": 1
+  },
+  "manifest": {
+    "themeColor": "#f2e2b9",
+    "backgroundColor": "#f2e2b9",
+    "display": "minimal-ui",
+    "orientation": "portrait-primary",
+    "categories": [
+      "business",
+      "photo"
+    ]
+  }
 }
