Synced by Front Matter

--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "alpine"
   ],
   "author": {
-    "name": "Scott Evans",
+    "name": "Phoenix R.",
     "url": "https://scott.ee",
-    "email": "git@scott.ee"
+    "email": "royphoenix@protonmail.com"
   },
   "license": "MIT",
   "devDependencies": {
