--- a/src/_data/settings.json
+++ b/src/_data/settings.json
@@ -3,7 +3,7 @@
   "themeColorDark": "#372d11",
   "cdn": false,
   "author": {
-    "name": "Phoenix Roy",
+    "name": "Phoenix R.",
     "email": "royphoenix@protonmail.com",
     "url": "https://scott.ee",
     "location": "Canada",
