--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
     "node-html-to-image": "^4.0.0",
     "rimraf": "^5.0.5",
     "terser": "^5.27.0"
+  },
+  "dependencies": {
+    "date-fns": "^3.3.1",
+    "rss-parser": "^3.13.0"
   }
 }
