--- a/src/_data/settings.json
+++ b/src/_data/settings.json
@@ -5,7 +5,7 @@
   "author": {
     "name": "Phoenix R.",
     "email": "royphoenix@protonmail.com",
-    "url": "https://nebulanix.netlify.app/",
+    "url": "https://nebulanix.com/",
     "location": "Canada",
     "fediverseProfile": "https://bookstodon.com/@nebulanix"
   },
